# sof

sof/: CMakeLists.txt  todo.txt
sof/console/: sof_console.vcproj
sof/doc/doxygen/: Doxyfile
sof/doc/website/: sof.html
sof/examples/: sof_examples.vcproj
sof/examples/bundle1/: sof_examples_bundle1.vcproj
sof/examples/bundle1/src/: BundleActivator1.cpp  dll.cpp
sof/examples/bundle2/src/: BundleActivator2.h  dll.cpp
sof/examples/src/: sof_examples.cpp
sof/impl/: sof.sln  sof.vcproj
sof/remote/SofAdminUI/: plugin.xml
sof/remote/console/: CMakeLists.txt  sof_remote_console.vcproj
sof/remote/console/src/: sof_remote_console.cpp
sof/remote/doc/doxygen/: Doxyfile
sof/remote/examples/bundle1/: sof_remote_examples_bundle1.vcproj
sof/remote/examples/bundle2/: CMakeLists.txt  sof_remote_examples_bundle2.vcproj
sof/remote/examples/idl/: Speaker.idl
sof/remote/idl/: CORBAObjects.idl  RemoteRegistry.idl  Speaker.idl  gen.bat  gen_speaker.bat  idl.cmake
sof/remote/impl/: CMakeLists.txt  sof_remote.sconscript  sof_remote.sln  sof_remote.vcproj
sof/remote/registry/: sof_remote_registry.vcproj
sof/remote/registry/src/: registry.cpp
sof/remote/test/: CMakeLists.txt
sof/remote/test/src/: BundleActivator1.cpp  BundleActivator1.h  CORBAHelperTest.cpp  CustomizedCORBAHelper.cpp  CustomizedCORBAHelper.h  RemoteSOFLauncherTest.cpp  sof_remote_test.cpp
sof/test/: sof_test.sconscript  sof_test.vcproj
sof/test/TestDll1/: TestDll1.vcproj
sof/test/TestDll1/src/: ITestImpl.cpp  ITestImpl2.cpp  dll_test.cpp
sof/test/TestDll2/: TestDll2.vcproj
sof/test/TestDll2/src/: BundleActivator1.h  BundleActivator2.cpp  BundleActivator2.h  dll_test.cpp
sof/test/src/: BundleActivator2.cpp  ClassloaderTest.cpp  ConfigFileReaderTest.cpp  ITestImpl.cpp  LauncherTest.cpp  ServiceListenerNotificationTest.cpp  ServiceListenerRegistrationTest.cpp  TestBundleActivator.cpp  TestBundleActivator.h  TestClass.cpp  ThreadingTest.cpp
tags/sof_1_0_9120/sof/: sof_remote.sconstruct
tags/sof_1_3_11090/sof/: todo.txt
tags/sof_1_3_11090/sof/remote/impl/: CMakeLists.txt
tags/sof_1_3_11090/sof/remote/impl/src/sof/framework/remote/corba/: CORBAHelper.cpp  RemoteSOFLauncher.cpp  RemoteServiceInfo.cpp  RemoteServiceListenerInfo.cpp  RemoteServiceListenerInfo.h
tags/sof_1_3_11090/sof/remote/impl/src/sof/framework/remote/corba/registry/: IRegistryFacadeImpl.cpp
trunk/sof/: CMakeLists.txt  sof_remote.sconstruct  todo.txt
trunk/sof/console/: sof_console.vcproj
trunk/sof/examples/: sof_examples.vcproj
trunk/sof/impl/: sof.sln  sof.vcproj
trunk/sof/test/: CMakeLists.txt  sof_test.vcproj
(+427 files in other folders)
